Fixed error colour contrast

--- a/TravelExperts/wwwroot/css/site.css
+++ b/TravelExperts/wwwroot/css/site.css
@@ -118,6 +118,10 @@ a {
 
 }
 
+.text-danger {
+    color: #FAA0A0 !important;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
